Update Instantiate menu in 03.player_movement_code.rst
This commit updates the instructions for instantiating a new child scene so that the menu option matches the language used in version 4.1.1.

--- a/getting_started/first_3d_game/03.player_movement_code.rst
+++ b/getting_started/first_3d_game/03.player_movement_code.rst
@@ -361,7 +361,7 @@ tab at the top of the editor to do so.
 If you closed the scene before, head to the *FileSystem* dock and double-click
 ``main.tscn`` to re-open it.
 
-To instantiate the ``Player``, right-click on the ``Main`` node and select *Instance
+To instantiate the ``Player``, right-click on the ``Main`` node and select *Instantiate
 Child Scene*.
 
 |image2|
